apps/frontend-public/overlays/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-public
spec:
  ingressClassName: traefik
  rules:
    - host: public.lantern.diiage
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-public
                port:
                  name: http
